SC2-207 [IOS] - The location and consignee information doesn't automatically load after selecting the location

--- a/DMSDriver/DMSDriver/Resources/Storyboards/Business.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Business.storyboard
@@ -399,7 +399,7 @@
                                                                 <action selector="onbtnClickEditWithBtn:" destination="4WY-JI-KE3" eventType="touchUpInside" id="SaS-Mr-s5g"/>
                                                             </connections>
                                                         </button>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q4g-Pf-d82">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q4g-Pf-d82">
                                                             <rect key="frame" x="255" y="12.5" width="80" height="28"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="28" id="U1t-kT-bPt"/>
